# objects-api-client-django

./: .flake8  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  code-quality.yml
objectsapiclient/: __init__.py  admin.py  apps.py  client.py  dataclasses.py  models.py  utils.py
objectsapiclient/migrations/: 0001_initial.py  0002_auto_20230917_1644.py  0003_rename_config_model_fields.py  0004_alter_objectsclientconfiguration_options_and_more.py
testapp/: models.py  settings.py  urls.py
testapp/migrations/: 0001_initial.py
testapp/templates/: base.html  page.html
tests/: TODO  test_objects_api.py
